base-item: Silence -Waggregate-return

https://bugzilla.gnome.org/show_bug.cgi?id=744590